# curlys-books

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  project_contextv5_phase0COMPLETE.md  pyproject.toml
.github/workflows/: ci
apps/api/: main.py  tasks.py
apps/api/middleware/: auth_cloudflare.py
apps/api/routers/: banking.py  receipts.py  reimbursements.py  review.py
apps/web/: middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/health/: route.ts
apps/web/app/review/: page.tsx
docs/: CATEGORIZATION_REVIEW_WORKFLOW.md  CATEGORIZATION_SYSTEM.md  CLOUDFLARE_TUNNEL_SETUP.md  CURRENT_STATUS.md  DATABASE_LAZY_INIT.md  LESSONS_LEARNED_WEB_CACHING.md  OCR_PROVIDER_ARCHITECTURE.md  PARSER_ARCHITECTURE_OVERHAUL.md  PARSER_DEV_BUNDLE.md  PARSER_DEV_GUIDE.md  PARSER_REVIEW_AND_LEARNINGS.md  PHASE1_COMPLETE.md  PHASE1_OCR_UPGRADE_COMPLETE.md  PHASE1_PROGRESS.md  REFACTOR_OCR_COMPLETE.md  TESTING_REVIEW_UI_IMPROVEMENTS.md  VALIDATION_WARNINGS_FEATURE.md  WALMART_PARSER_MISTAKES.md  WEB_LOOKUP_TEST_RESULTS.md  getting_started.md
docs/ContextDocs/Phase1/: ai_categorization_spec.txt  implementation_roadmap.txt  parser_dev_guide.txt  receipt_samples_analysis.txt
docs/integrations/: aws-textract.md  gmail.md
infra/db/: init.sql
infra/db/alembic/versions/: 001_initial_schema.py
infra/db/migrations/: env.py
infra/db/migrations/versions/: 003_vendor_registry.py  004_product_mappings.py  005_review_system.py  006_add_bounding_boxes.py  007_add_bbox_to_review_view.py  008_add_validation_warnings.py  009_add_validation_warnings_to_review_view.py
infra/db/seeds/: chart_of_accounts.csv
infra/docker/api/: Dockerfile
infra/docker/web/: Dockerfile
infra/docker/worker/: Dockerfile
scripts/: analyze_walmart_ocr.py  reprocess_receipt.py  test_canadian_tire.py  test_categorization.py  test_categorization_only.py  test_costco_categorization.py  test_e2e_categorization.py  test_gfs_categorization.py  test_ocr_providers_simple.py  test_walmart.py  test_walmart_ocr_refactor.py  test_walmart_textract.py  test_walmart_workflow.py  test_web_lookup.py
services/worker/: celery_app.py
services/worker/tasks/: ocr_receipt.py  ocr_receipt.py.phase1
vendor-samples/CurlysCanteenCorp/Capital/: Capital Foodservice PAP Payment for CUR300 14587430 CANADA INC..eml
vendor-samples/CurlysCanteenCorp/GFS/: EFT Notification (1).XLS  EFT Notification (2).XLS
vendor-samples/Weekofoct10batch/: IMG20251008130044.heic  IMG20251008130133.heic  IMG20251008130317.heic  IMG20251008130837.heic  IMG20251008130837_01.heic  IMG20251008131715.heic  IMG20251008131724.heic  IMG20251008131735.heic  IMG20251008131736.heic  IMG20251008131746.heic  IMG20251011010346.heic
